--- a/frog-game/style.css
+++ b/frog-game/style.css
@@ -24,3 +24,21 @@ canvas {
     width: 100%;
     height: 100%;
 }
+
+.sound {
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 36px;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%, -30px);
+}
+
+[data-sound=true] {
+    color: green !important;
+}
+
+[data-sound=false] {
+    color: red !important;
+}
